<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyNews</string>

    <string name="top_stories_tab_name">Top stories</string>
    <string name="most_popular_tab_name">Most popular</string>
    <string name="arts_tab_name">Arts</string>

    <!-- Each tab content -->
    <string name="top_stories_content">Top stories content will be displayed here</string>
    <string name="most_popular_content">Most popular content will be displayed here</string>
    <string name="arts_content">Arts content will be displayed here</string>

    <!-- Tab buttons icons names -->
    <string name="search_button">Search</string>
    <string name="settings_button">Settings</string>
    <string name="back_button">Back Button</string>
    <string name="notifications_button">Notifications</string>
    <string name="about_button">About</string>
    <string name="help_button">Help</string>


    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_option_1">Top Stories</string>
    <string name="menu_option_2">Most Popular</string>
    <string name="menu_option_3">Arts</string>
    <string name="menu_option_4">Search</string>
    <string name="menu_option_5">Notifications</string>
    <string name="menu_tab_name">Find an article</string>

    <!-- Used in Search Fragment -->
    <string name="search_hint">Enter keyword or article title</string>
    <string name="begin_date" tools:ignore="ExtraTranslation">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="date_format" translatable="false">YYYY/MM/DD</string>
    <string name="arts">Arts</string>
    <string name="business">Business</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="politics">Politics</string>
    <string name="sports">Sports</string>
    <string name="travel">Travel</string>
    <string name="search_button_text">Search</string>
    <string name="error_message_search_fragment">Please select at least one categorie</string>

    <!-- URL for API requests -->
    <string name="top_stories_url">https://api.nytimes.com/svc/topstories/v2/home.json?api-key=BCdKtxQWdZXLs9x3O9S4CY1cAJUgTCmm</string>
    <string name="arts_url">https://api.nytimes.com/svc/topstories/v2/arts.json?api-key=BCdKtxQWdZXLs9x3O9S4CY1cAJUgTCmm</string>
    <string name="most_popular_url">https://api.nytimes.com/svc/mostpopular/v2/mostviewed/all-sections/7.json?api-key=BCdKtxQWdZXLs9x3O9S4CY1cAJUgTCmm</string>

    <!-- Images content descriptions -->
    <string name="logo_content_description">application logo</string>
    <string name="article_list_image_content_description">article image</string>

    <!-- Notification activity -->
    <string name="enable_notifications">Enable notifications (once per day)</string>
    <string name="notification_title">My News</string>
</resources>

