<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_activity_menu_top_stories"
            android:icon="@drawable/menu_option_1_button"
            android:title="@string/menu_option_1" />
        <item
            android:id="@+id/main_activity_menu_most_popular"
            android:icon="@drawable/menu_option_2_button"
            android:title="@string/menu_option_2" />
        <item
            android:id="@+id/main_activity_menu_arts"
            android:icon="@drawable/menu_option_3_button"
            android:title="@string/menu_option_3" />
    </group>

    <item android:title="@string/menu_tab_name">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/main_activity_menu_search"
                    android:icon="@drawable/search_button"
                    android:title="@string/menu_option_4" />
                <item
                    android:id="@+id/main_activity_menu_notifications"
                    android:icon="@drawable/menu_option_5_button"
                    android:title="@string/menu_option_5" />
            </group>
        </menu>
    </item>
</menu>